// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<View>
  <View>
    <Text
      accessibilityRole="heading"
      testID="topic-name"
    >
      Animals
    </Text>
  </View>
</View>
`;

exports[`should render correctly when loading 1`] = `<View />`;

exports[`should render correctly with a description 1`] = `
<View>
  <View>
    <Text
      accessibilityRole="heading"
      testID="topic-name"
    >
      Animals
    </Text>
    <View />
    <Text
      testID="topic-description"
    >
      Animals are multicellular eukaryotic organisms.
    </Text>
  </View>
</View>
`;
